--- a/design.html
+++ b/design.html
@@ -18,48 +18,67 @@
     justify-content: center;
     transition: 1s ease;
     background-color: rgb(5, 5, 5);
+
   }
 
   main {
     background-color: rgb(5, 5, 5);
-    /* margin: 0px auto 0px auto; */
-    margin-top: auto;
-    margin-bottom: auto;
-    height: 70vh;
-    width: 70vh;
+    padding: 1rem;
     display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 35px;
     box-shadow: 2px 3px 19px 2px;
-    transition: 2s;
+    transition: 5s;
   }
 
   main p {
 
     text-align: center;
     font-size: 20rem;
-    padding: 0;
-    margin: 0;
+    padding: 2rem;
+    /* margin: 0; */
     margin-left: auto;
     margin-right: auto;
     text-shadow: cornsilk;
     text-shadow: 17px -19px 20px;
     color: darkmagenta;
-    transition: 3s;
+    transition: 5s;
   }
   .di{
-    font-size: 200rem;
+    font-size: 5rem;
+    background-image: linear-gradient(rgb(24, 23, 23), rgb(84, 5, 90));
+    -webkit-text-stroke-color: rgb(59, 10, 59);
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-fill-color: rgb(180, 169, 169);
+    border-radius: 50px;
   }
+  .wrapper{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+  }
+@media screen and (max-width: 400px){
+  .di{
+    font-size: 3rem;
+  }
+}
+
 </style>
 
 <body>
-  <main>
-    <p id="draw"></p>
-  </main>
+  <div class="wrapper">
+      <main>
+        <p id="draw"></p>
+      </main>
+  </div>
+
 
 </body>
 <script>
   let main = document.querySelector('#draw')
-  let Name = 'Anthony';
+  let Name = ['A','N','T','H','O','N','Y','ANTHONY'];
 
   for (var i = 0; i <= Name.length-1; i++) {
     (function (index) {
@@ -67,8 +86,7 @@
         console.log(index);
         main.classList.add('di');
          main.innerHTML = Name[index] 
-         main.classList.remove('di');
-        }, i * 1000);
+        }, i * 500);
     })(i);
   }
 
