--- a/paper.html
+++ b/paper.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Document</title>
+  <script src="./app.js"></script>
 </head>
 <style>
   @import url(https://fonts.googleapis.com/css?family=Indie+Flower);
