--- a/index.html
+++ b/index.html
@@ -4,244 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Kromate portfolio</title>
- 
-
-
+  <style>
+    body{
+      background-color: black;
+    }
+  </style>
 </head>
 
 <body>
-
-  <nav class="navbar navbar-expand-xl navbar-light bg-dark">
-    <a class="navbar-brand text-light" href="#main">Kromate</a>
-    <button class="navbar-toggler bg-light " type="button" data-toggle="collapse" data-target="#navbar"
-      aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon bg-light"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbar">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active text-light" href="#about">About Me </a>
-        <a class="nav-item nav-link text-light" href="#timeline">Timeline</a>
-        <a class="nav-item nav-link text-light" href="#skills">Skills</a>
-        <a class="nav-item nav-link text-light" href="#contact" >Contact</a>
-      </div>
-    </div>
-  </nav>
-
-  <div class="contain container " id="main">
-    <h1>Need a <span class="txt-type" data-wait="2500" data-words='["Website?", "Designer?", "Photographer?"]'></span><i
-        class="fas fa-pencil-alt"></i></h1>
-    <h2><a href="https://www.github.com/kromate" class="author">Kromate</a> is here for you</h2>
-
-  </div>
-  <div class="container mt-0 p-3 bg-dark" id="about">
-    <p class="header text-white font-weight-light text-center" style="font-size: 35px;"><u>About Me</u> </p>
-    <p class="text-light"> Hi ! ! !<br> I am Anthony, also known as KROMATE <br> Currently a student of the
-      University of Lagos, Studying Computer Engineering</p>
-    <p class="text-light"> Been writting code since my Secondary School days, But only took programming Seriously
-      after I entered the university <br>
-      Since then have written various languages, some includes but not excluded to python, java, Javascript, dart</p>
-    <p class="text-light"> My main Stack would be Frontend Development for both web & mobile ( <a href="#skills">skills
-        level</a>) <br> <br>
-      Below is a short summary of my developer career</p>
-  </div>
-
-
-
-  <div class="container bg-dark " id="timeline">
-    <h2 class="text-light text-center m-3" style="font-size: 50px;"> <u>Timeline </u> </h2>
-
-    <ul class="timeline">
-      <li>
-        <div class="timeline-badge">
-          <a><i class="fa fa-circle" id=""></i></a>
-        </div>
-        <div class="timeline-panel">
-          <div class="timeline-heading">
-            <h4>Introduction Programming</h4>
-          </div>
-          <div class="timeline-body">
-            <p>This was when i first really understood the meaning, concept and terminologies in programming</p>
-          </div>
-          <div class="timeline-footer">
-            <p class="text-right">Jun, 2016</p>
-          </div>
-        </div>
-      </li>
-
-      <li class="timeline-inverted">
-        <div class="timeline-badge">
-          <a><i class="fa fa-circle invert" id=""></i></a>
-        </div>
-        <div class="timeline-panel">
-          <div class="timeline-heading">
-            <h4>started professional programming</h4>
-          </div>
-          <div class="timeline-body">
-            <p>This was when i gained admission to the university and decided to choose software development as my Major
-              but the Unoversity didn't have it, so i had to settle for computer Engineering</p>
-          </div>
-          <div class="timeline-footer">
-            <p class="text-right">Dec, 2018</p>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="timeline-badge">
-          <a><i class="fa fa-circle" id=""></i></a>
-        </div>
-        <div class="timeline-panel">
-          <div class="timeline-heading">
-            <h4>Joined a Developer Community(DSC)</h4>
-          </div>
-          <div class="timeline-body">
-            <p>Heard about the Developer student Community through a friend and after attending and participating an
-              hackacthon organised by them decided to join the community.</p>
-          </div>
-          <div class="timeline-footer">
-            <p class="text-right">Apr, 2019</p>
-          </div>
-        </div>
-      </li>
-
-      <li class="timeline-inverted">
-        <div class="timeline-badge">
-          <a><i class="fa fa-circle invert" id=""></i></a>
-        </div>
-        <div class="timeline-panel">
-          <div class="timeline-heading">
-            <h4>Started Frequent participation in competitions</h4>
-          </div>
-          <div class="timeline-body">
-            <p>started participating in lots of competitions, hackacthons and challenges, which helped me grow and
-              improve my skills. I sometimes post about my hackathons experiences on <a
-                href="https://kromate.hashnode.dev/">Hashnode</a> and in order not to make the timeline too long i won't
-              be posting all my hackathons on this timeline, but if you interested you can check out my <a
-                href="https://docs.google.com/document/d/1-Jb5DX9qlqI4fQupTfvHKyrmq1oEHpTayI_u8PKvGS8">Resume</a></p>
-          </div>
-          <div class="timeline-footer">
-            <p class="text-right">Jun, 2019</p>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="timeline-badge">
-          <a><i class="fa fa-circle" id=""></i></a>
-        </div>
-        <div class="timeline-panel">
-          <div class="timeline-heading">
-            <h4>Started the DevC traning with Andela</h4>
-          </div>
-          <div class="timeline-body">
-            <p>Was among the selected to few to participate in the DevC training with Andela and also finished the
-              programming, it was during the this program I learnt Android Development(Java)</p>
-          </div>
-          <div class="timeline-footer">
-            <p class="text-right">Aug, 2019</p>
-          </div>
-        </div>
-      </li>
-
-      <li class="timeline-inverted">
-        <div class="timeline-badge">
-          <a><i class="fa fa-circle invert" id=""></i></a>
-        </div>
-        <div class="timeline-panel">
-          <div class="timeline-heading">
-            <h4>Became a DSC & ECX Tutor</h4>
-          </div>
-          <div class="timeline-body">
-            <p>Decided it was time for me to give back to the community and so i applied for the role of a tutor in the
-              Developer Student Community and was accepted, I taught/teach(depending on when you view this) the Students
-              Frontend Development (html, css & Javascript)</p>
-          </div>
-          <div class="timeline-footer primary">
-            <p class="text-right">Jan, 2020</p>
-          </div>
-        </div>
-      </li>
-      <li class="clearfix no-float"></li>
-    </ul>
-
-
-  </div>
-
-  <div class="container bg-dark p-3" id="skills">
-    <div class="wrapper ">
-      <h2 class="text-light text-center how-title " style="font-size: 35px;"> <u>Projects </u></h2>
-      <p class="text-light text-center"> Below are some of the projects have worked on </p>
-  <table class="table">
-    <thead>
-      <tr class="text-light display-10">
-        <th scope="col">#</th>
-        <th scope="col">Project Name</th>
-        <th scope="col">Tech Stack Used</th>
-        <th scope="col">Links</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="text-light display-10">
-        <th scope="row">1</th>
-        <td>Light-Up</td>
-        <td>bootstrap, Javascript & Jquery, Firebase</td>
-        <td> <a href="https://lightup.netlify.app/dashboard.html"><i class="fa fa-share"></i></a></td>
-      </tr>
-      <tr class="text-light display-10">
-        <th scope="row">2</th>
-        <td>KAA</td>
-        <td>Firebase, Javascript, PWA</td>
-        <td><a href="https://acarchive.netlify.app/home.html"><i class="fa fa-share"></i></a></td>
-      </tr>
-      <tr class="text-light display-10">
-        <th scope="row">3</th>
-        <td>RANT</td>
-        <td>Web APIs, Materialize, Javascript</td>
-        <td><a href="https://krom-tech.github.io/Rant/"><i class="fa fa-share"></i></a></td>
-      </tr>
-    </tbody>
-  </table>
-
-        <p class="text-light text-center">All listed projects Source Code and much more are available on my <a href="https://github.com/kromate">github</a></p>
-
-
-    </div><!-- end of /.coloumn -->
-
-  </div>
-
-  <div class="container bg-dark p-3 mt-3" id="contact">
-    <h2 class="text-light text-center how-title" style="font-size: 35px;"> <u>Contact Details</u></h2>
-    <p class="text-light text-center">If you need to Contact Me <br> below are a list of Social media Buttons Click
-      whichever
-      you comfortable with<br> Can't wait to hear from you</p>
-
-
-
-    <section id="jm">
-
-        <div class="fa-icon-wrap fa-icon-effect-8 text-center">
-          <div class="row text-center">
-          <a href="mailto:akpananthony33@gmail.com" class="fa-icon fas fa-envelope">Gmail</a>
-          <a href="https://twitter.com/kromate_24" class="fa-icon fab fa-twitter">twitter</a>
-          <a href="https://web.facebook.com/anthony.akpan.7140" class="fa-icon fab fa-facebook-f">facebook</a>
-          <a href="https://github.com/kromate" class="fa-icon  fab fa-github">>github</a>
-          <a href="https://www.instagram.com/kromtech_24/" class="fa-icon fab fa-instagram">Yelp</a>
-          <a href="https://medium.com/@akpananthony33" class="fa-icon  fab fa-medium">medium</a>
-          <a href="https://stackoverflow.com/users/13326086/kromate" class="fa-icon fab fa-stack-overflow">stack overflow</a>
-          <a href="https://www.linkedin.com/in/anthony-akpan-00256218a/" class="fa-icon fab fa-linkedin">linked in</a>
-        </div>
-      </div>
-
-    </section>
-
-    
-
-
-  </div>
-
-
-
 
 
   <script src="app.js">
